--- a/.github/workflows/init-test.yaml
+++ b/.github/workflows/init-test.yaml
@@ -13,7 +13,7 @@ jobs:
     strategy:
      fail-fast: false
      matrix:
-      script: ["./nvim.sh"]
+      script: ["./nvim.sh", "./fish.sh"]
 
     steps:
      - uses: actions/checkout@v2
