--- a/.github/workflows/init-test.yaml
+++ b/.github/workflows/init-test.yaml
@@ -21,3 +21,10 @@ jobs:
        working-directory: ./bin/scripts
        run: ${{matrix.script}}
 
+   init-test:
+     runs-on: ubuntu-latest
+     steps:
+      - uses: actions/checkout@v2
+      - name: initilze dotfiles test
+        working-directory: ./bin
+        run: ./install.sh
