--- a/.github/workflows/release_tests.yaml
+++ b/.github/workflows/release_tests.yaml
@@ -22,9 +22,9 @@ jobs:
        run: ${{matrix.script}}
   init-test:
     runs-on: ubuntu-latest
+    needs: "unit-test"
     steps:
       - uses: actions/checkout@v2
       - name: initilize dotfiles test
         working-directory: ./bin
         run: ./install.sh
-   
