--- a/.github/workflows/release_tests.yaml
+++ b/.github/workflows/release_tests.yaml
@@ -19,7 +19,7 @@ jobs:
      - uses: actions/checkout@v2
      - name: unit-test of ${{matrix.script}}
        working-directory: ./bin/scripts
-       run: ${{matrix.script}}
+       run: bash -x ${{matrix.script}}
   init-test:
     runs-on: ubuntu-latest
     needs: "unit-test"
