--- a/.github/workflows/release_tests.yaml
+++ b/.github/workflows/release_tests.yaml
@@ -27,5 +27,5 @@ jobs:
       - uses: actions/checkout@v2
       - name: initilize dotfiles test
         working-directory: ./bin
-        run: ./install.sh \
-              ls -lsa
+        run: ./install.sh
+        run: bash -c "ls -lsa"
