--- a/.github/workflows/release_tests.yaml
+++ b/.github/workflows/release_tests.yaml
@@ -13,14 +13,14 @@ jobs:
     strategy:
      fail-fast: false
      matrix:
-      script: ["./nvim.sh", "./fish.sh"]
+      script: ["./nvim.sh", "./fish.sh", "./nodebrew.sh"]
 
     steps:
      - uses: actions/checkout@v2
      - name: unit-test of ${{matrix.script}}
        working-directory: ./bin/scripts
        run: bash -x ${{matrix.script}}
-       
+
   init-test:
     runs-on: ubuntu-latest
     needs: "unit-test"
@@ -33,3 +33,9 @@ jobs:
           bash -c "ls -lsa ~"
           bash -c "sudo apt install tree -y"
           bash -c "tree ~/dotfiles"
+          bash -c "tree ~/.config"
+      - name: nodebrew after install Test
+          needs: initilize dotfiles test
+          run: |
+            chmod +x ./doctor.sh
+            ./doctor.sh
