--- a/.github/workflows/release_tests.yaml
+++ b/.github/workflows/release_tests.yaml
@@ -24,6 +24,11 @@ jobs:
   init-test:
     runs-on: ubuntu-latest
     needs: "unit-test"
+    strategy:
+      fail-fast: false
+      matrix:
+        oses: ["ubuntu:latest", "centos:latest"]
+    container: ${{matrix.oses}}
     steps:
       - uses: actions/checkout@v2
       - name: initilize dotfiles test
