--- a/.github/workflows/release_tests.yml
+++ b/.github/workflows/release_tests.yml
@@ -24,18 +24,22 @@ jobs:
   init-test:
     runs-on: ubuntu-latest
     needs: "unit-test"
-    strategy:
-      fail-fast: false
-      matrix:
-        oses: ["ubuntu:latest", "centos:latest"]
-    container: ${{matrix.oses}}
     steps:
       - uses: actions/checkout@v2
       - name: initilize dotfiles test
         working-directory: ./bin
         run: |
-          apt install sudo
           ./install.sh
           bash -c "ls -lsa ~"
           bash -c "sudo apt install tree -y"
           bash -c "tree -l ~"
+
+   ubuntu-container:
+     runs-on: ubuntu-latest
+     name: "Test Ubuntu container"
+     needs: "init-test"
+     container: "ubuntu:latest"
+     steps:
+       - uses: actions/checkout@v2
+        run: |
+          curl -o - https://raw.githubusercontent.com/Kazanami/dotfiles/master/bin/install.sh | bash
