--- a/.github/workflows/release_tests.yml
+++ b/.github/workflows/release_tests.yml
@@ -34,12 +34,12 @@ jobs:
           bash -c "sudo apt install tree -y"
           bash -c "tree -l ~"
 
-   ubuntu-container:
-     runs-on: ubuntu-latest
-     name: "Test Ubuntu container"
-     needs: "init-test"
-     container: "ubuntu:latest"
-     steps:
-       - uses: actions/checkout@v2
+  ubuntu-containar:
+    runs-on: ubuntu-latest
+    needs: "init-test"
+    container: ubuntu:latest
+    steps:
+      - name: Test Ubuntu container
+        working-directory: ./bin
         run: |
           curl -o - https://raw.githubusercontent.com/Kazanami/dotfiles/master/bin/install.sh | bash
