--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -1,4 +1,4 @@
-name: Ubuntu (no-container)
+name: "Ubuntu (no-container)"
 
 on:
   deployment:
@@ -7,5 +7,6 @@ jobs:
   ubuntu-vanilla:
     runs-on: ubuntu-latest
     steps:
-      - run: |
-        curl -o - https://raw.githubusercontent.com/Kazanami/dotfiles/master/bin/install.sh | bash
+      - name: "Run dotfiles Install"
+        run: |
+         curl -o - "https://raw.githubusercontent.com/Kazanami/dotfiles/master/bin/install.sh" | bash
