--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -27,7 +27,7 @@ jobs:
    steps:
      - name: Send trigger init test
        run: |
-          curl -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          curl -X POST -H "Authorization: token ${{ secrets.GACTION_HOOKER }}" \
              -H "Content-Type: application/json" \
              https://api.github.com/repos/Kazanami/dotfiles/deployments \
              --data '{"ref": "master"}'
