--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -5,6 +5,8 @@ on:
     types: [run_init_test]
   issues:
     type: opened
+  push:
+    branches: master
 
 jobs:
   ubuntu-vanilla:
@@ -14,3 +16,10 @@ jobs:
       - name: "Run dotfiles Install"
         run: |
          curl -o - "https://raw.githubusercontent.com/Kazanami/dotfiles/master/bin/install.sh" | bash
+  push-events:
+   runs-on: ubuntu-latest
+   if: github.event_name == 'push'
+   steps:
+    - name: Disable steps
+      run: exit 0
+      
