--- a/.github/workflows/ubuntu_mini.yml
+++ b/.github/workflows/ubuntu_mini.yml
@@ -12,5 +12,5 @@ jobs:
     steps:
       - name: "Run dotfiles Install"
         run: |
-         apt update && apt install -y wget sudo
+         apt update && apt install -y wget sudo software-properties-common
          wget -O - "https://raw.githubusercontent.com/Kazanami/dotfiles/master/bin/install.sh" | bash -x
