--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -23,19 +23,40 @@ jobs:
        working-directory: ./bin/scripts
        run: bash -x ${{matrix.script}}
 
-  trigger-send:
-   runs-on: ubuntu-latest
-   needs: "unit-test"
-   steps:
-     - name: Send trigger init test
-       uses: peter-evans/repository-dispatch@v1
-       with:
-         token: ${{ secrets.REPO_TOKEN }}
-         repository: Kazanami/dotfiles
-         event-type: init-test
-         client-payload: '{"ref": "${{ github.ref }}" , "sha": "${{ github.sha }}"}'
+  #trigger-send:
+  # runs-on: ubuntu-latest
+  # needs: "unit-test"
+  # steps:
+  #   - name: Send trigger init test
+  #     uses: peter-evans/repository-dispatch@v1
+  #     with:
+  #       token: ${{ secrets.REPO_TOKEN }}
+  #       repository: Kazanami/dotfiles
+  #       event-type: init-test
+  #       client-payload: '{"ref": "${{ github.ref }}" , "sha": "${{ github.sha }}"}'
        #run: |
        #   curl -X POST -H "Authorization: token ${{secrets.REPO_TOKEN}}" \
        #      -H "Content-Type: application/json" \
        #      https://api.github.com/repos/Kazanami/dotfiles/dispatches \
        #      --data '{"event_type":"run_init_test","client_payload":{"test":true}}'
+    init-test (Ubuntu Vanilla):
+      runs-on: ubuntu-latest
+      needs: "unit-test"
+      steps:
+        - name: init-test of Ubuntu vanilla
+        - run: |
+            curl -o - "https://raw.githubusercontent.com/Kazanami/dotfiles/master/bin/install.sh" | bash
+
+    init-test (Container):
+      runs-on: ubuntu-latest
+      needs: "unit-test"
+      strategy:
+        fail-fast: false
+        matrix:
+          cont_oses: ["ubuntu:latest"]
+      container: ${{ matrix.cont_oses }}
+      steps:
+        name: init-test of Container (${{ matrix.cont_oses }})
+        run: |
+                 apt update && apt install -y wget sudo software-properties-common
+                 wget -O - "https://raw.githubusercontent.com/Kazanami/dotfiles/master/bin/install.sh" | bash -x
