--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -39,24 +39,24 @@ jobs:
        #      -H "Content-Type: application/json" \
        #      https://api.github.com/repos/Kazanami/dotfiles/dispatches \
        #      --data '{"event_type":"run_init_test","client_payload":{"test":true}}'
-    init-test (Ubuntu Vanilla):
-      runs-on: ubuntu-latest
-      needs: "unit-test"
-      steps:
-        - name: init-test of Ubuntu vanilla
-        - run: |
-            curl -o - "https://raw.githubusercontent.com/Kazanami/dotfiles/master/bin/install.sh" | bash
-
-  init-test(Container):
-     runs-on: ubuntu-latest
-     needs: "unit-test"
-     strategy:
-       fail-fast: false
-       matrix:
-         cont_oses: ["ubuntu:latest"]
-     container: ${{ matrix.cont_oses }}
-     steps:
-       name: init-test of Container (${{ matrix.cont_oses }})
+  init-test (Ubuntu Vanilla):
+   runs-on: ubuntu-latest
+   needs: "unit-test"
+   steps:
+     - name: init-test of Ubuntu Vanilla
        run: |
-            apt update && apt install -y wget sudo software-properties-common
-            wget -O - "https://raw.githubusercontent.com/Kazanami/dotfiles/master/bin/install.sh" | bash -x
+         curl -o - "https://raw.githubusercontent.com/Kazanami/dotfiles/master/bin/install.sh" | bash
+  init-test (Container):
+    runs-on: ubuntu-latest
+    needs: "unit-test"
+    strategy:
+      fail-fast: false
+      matrix:
+        cont_oses: ["ubuntu:latest"]
+    container: ${{ matrix.cont_oses }}
+    steps:
+      - name: init-test of Container (${{ matrix.cont_oses }})
+        run: |
+          [[ `type apt` ]] && apt update && apt install -y wget sudo software-properties-common || yum update; yum install wget sudo 
+          wget -O - "https://raw.githubusercontent.com/Kazanami/dotfiles/master/bin/install.sh" | bash -x
+      
