--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -58,5 +58,5 @@ jobs:
     steps:
       - name: init-test of Container (${{ matrix.cont_oses }})
         run: |
-          [[ `type apt` ]] && apt update && apt install -y wget sudo software-properties-common || yum update; yum install wget sudo
+          test `type apt` && apt update && apt install -y wget sudo software-properties-common || yum update; yum install wget sudo
           wget -O - "https://raw.githubusercontent.com/Kazanami/dotfiles/master/bin/install.sh" | bash -x
