--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -57,6 +57,10 @@ jobs:
     steps:
       - name: init-test of Container (${{ matrix.cont_oses }})
         run: |
-          [[ `type apt` ]] && apt update && apt install -y wget sudo software-properties-common || yum update; yum install wget sudo 
+          if type apt > /dev/null 2>&1;
+          then
+           apt update && apt install -y wget sudo software-properties-common
+          else
+           yum update; yum install wget sudo
+          fi
           wget -O - "https://raw.githubusercontent.com/Kazanami/dotfiles/master/bin/install.sh" | bash -x
-      
