--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: "Unit Test"
+name: "All Test"
 
 on:
   push:
@@ -23,22 +23,6 @@ jobs:
        working-directory: ./bin/scripts
        run: bash -x ${{matrix.script}}
 
-  #trigger-send:
-  # runs-on: ubuntu-latest
-  # needs: "unit-test"
-  # steps:
-  #   - name: Send trigger init test
-  #     uses: peter-evans/repository-dispatch@v1
-  #     with:
-  #       token: ${{ secrets.REPO_TOKEN }}
-  #       repository: Kazanami/dotfiles
-  #       event-type: init-test
-  #       client-payload: '{"ref": "${{ github.ref }}" , "sha": "${{ github.sha }}"}'
-       #run: |
-       #   curl -X POST -H "Authorization: token ${{secrets.REPO_TOKEN}}" \
-       #      -H "Content-Type: application/json" \
-       #      https://api.github.com/repos/Kazanami/dotfiles/dispatches \
-       #      --data '{"event_type":"run_init_test","client_payload":{"test":true}}'
   ubuntu-vanilla:
    runs-on: ubuntu-latest
    if: ${{ success() }}
@@ -47,6 +31,7 @@ jobs:
      - name: init-test of Ubuntu Vanilla
        run: |
          curl -o - "https://raw.githubusercontent.com/Kazanami/dotfiles/master/bin/install.sh" | bash
+
   containers:
     runs-on: ubuntu-latest
     needs: "unit-test"
