--- a/.github/workflows/which_test.yml
+++ b/.github/workflows/which_test.yml
@@ -1,12 +1,12 @@
 name: "Which Test"
 
 on:
-  push: [ "master" ]
+  push:
+   branches: [ 'master' ]
 
 jobs:
   containers:
     runs-on: ubuntu-latest
-    needs: "curl or wget"
     strategy:
       fail-fast: false
       matrix:
